--- a/index.html
+++ b/index.html
@@ -8,11 +8,38 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to DIC3R Web</h1>
+        <h1>./DIC3R</h1>
+        <p>Dice roller that supports multiple game systems</p>
     </header>
     <main>
-        <p>This is a simple webpage for the DIC3R Web project.</p>
-        <p>Stay tuned for exciting updates!</p>
+        <div class="github-link">
+            <a href="https://github.com/IKrasnodymov/dicer-web" target="_blank">View on GitHub</a>
+        </div>
+        <section class="app-description">
+            <p>Dice roller that supports multiple game systems</p>
+        </section>
+        <section class="app-screenshots">
+            <img src="assets/images/1.png" alt="DIC3R Screenshot 1">
+            <img src="assets/images/2.png" alt="DIC3R Screenshot 2">
+            <img src="assets/images/3.png" alt="DIC3R Screenshot 3">
+        </section>
+        <section class="features">
+            <h2>Features</h2>
+            <ul>
+                <li>Multi-dice system support (RPG, Warhammer, etc.)</li>
+                <li>Custom dice expressions</li>
+                <li>Saved rolls for quick access</li>
+                <li>Visual dice representation</li>
+            </ul>
+        </section>
+        <section class="design-by">
+            <h2>Design by</h2>
+            <p>IKrasnodymov</p>
+        </section>
+        <section class="app-links">
+            <a href="#" class="app-store-link">Download on the App Store</a>
+            <a href="#" class="play-store-link">GET IT ON Google Play</a>
+        </section>
     </main>
     <footer>
         <p>&copy; 2023 IKrasnodymov. All rights reserved.</p>
