stores and dice demo added
- Replace text links with App Store and Google Play badge images
- Add roll history and current roll display to dice rolling demo

--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
             <img src="assets/images/2.png" alt="DIC3R Screenshot 2">
             <img src="assets/images/3.png" alt="DIC3R Screenshot 3">
         </section>
+        
+        <section class="app-demo">
+            <div class="dice-roller">
+                <div class="dice-selector">
+                    <button class="dice-btn" data-dice="d4">d4</button>
+                    <button class="dice-btn" data-dice="d6">d6</button>
+                    <button class="dice-btn" data-dice="d8">d8</button>
+                    <button class="dice-btn" data-dice="d10">d10</button>
+                    <button class="dice-btn" data-dice="d12">d12</button>
+                    <button class="dice-btn" data-dice="d20">d20</button>
+                </div>
+                <div id="roll-results">
+                    <span id="roll-history"></span>
+                    <span id="current-roll">Roll a dice to see the result</span>
+                </div>
+            </div>
+        </section>
+
         <section class="features">
             <h2>Features</h2>
             <ul>
@@ -37,8 +55,12 @@
             <p>IKrasnodymov</p>
         </section>
         <section class="app-links">
-            <a href="#" class="app-store-link">Download on the App Store</a>
-            <a href="#" class="play-store-link">GET IT ON Google Play</a>
+            <a href="#" class="store-link">
+                <img src="assets/images/as.png" alt="Download on the App Store" class="store-badge">
+            </a>
+            <a href="#" class="store-link">
+                <img src="assets/images/gp.png" alt="Get it on Google Play" class="store-badge">
+            </a>
         </section>
     </main>
     <footer>
