--- a/index.html
+++ b/index.html
@@ -51,15 +51,11 @@
                 <li>Visual dice representation</li>
             </ul>
         </section>
-        <section class="design-by">
-            <h2>Design by</h2>
-            <p>IKrasnodymov</p>
-        </section>
         <section class="app-links">
-            <a href="#" class="store-link">
+            <a href="https://apps.apple.com/en/app/dic3r/id6670335823" target="_blank" class="store-link">
                 <img src="assets/images/as.png" alt="Download on the App Store" class="store-badge">
             </a>
-            <a href="#" class="store-link">
+            <a href="https://play.google.com/store/apps/details?id=com.dic3r.app&pcampaignid=web_share" target="_blank" class="store-link">
                 <img src="assets/images/gp.png" alt="Get it on Google Play" class="store-badge">
             </a>
         </section>
